fix: resolve workflow validation issues and simplify structure
- Fix syntax error in account-analytics-service.yml (fail-fast placement)
- Remove duplicate Docker push status step in ci-cd.yml
- Simplify analytics workflow by removing unnecessary change detection
- Standardize Java 21 usage across all services and documentation
- Update WARP.md to reflect correct Java version and remove preview features
- Streamline job dependencies and conditions for better maintainability